# crossposter

./: README.md
backend/: pyproject.toml  serptool.py  server.py  workflow.py
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/drafts/: route.ts
frontend/src/app/api/post/: route.ts
frontend/src/app/api/user/delete-token/: route.ts
frontend/src/app/api/user/fetch/: route.ts
frontend/src/app/api/user/save-rules/: route.ts
frontend/src/app/api/user/save-token/: route.ts
frontend/src/app/api/user/set-linkedin-organization/: route.ts
frontend/src/app/privacy-policy/: content.mdx  page.tsx
frontend/src/app/terms-of-service/: content.mdx
frontend/src/components/: AuthButtons.module.css  AuthButtons.tsx  BlueskyConnectModal.tsx  Providers.tsx  SignOutButton.tsx  TwitterSignIn.tsx
frontend/src/util/: blueSkyPoster.ts  linkedinPostShare.d.ts  linkedinPostShare.ts  platformNames.ts
frontend/src/utils/: twitter.ts
